[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turris-timezone"
version = "0.2.2"
description = "Due to missing /usr/share/zoneinfo on OpenWRT this package should provide some basic data extracted from /usr/share/zoneinfo of build machnine."
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "CZ.NIC z. s. p. o.", email = "packaging@turris.cz" },
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "tox",
]

[project.urls]
Homepage = "https://gitlab.nic.cz/turris/foris-controller/turris-timezone"

[tool.hatch.build.targets.sdist]
include = [
    "/turris_timezone",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
dependencies = [
  "l18n"
]
